<resources>
    <string name="app_name">Single Screen App</string>
    <string name="Name">Shaud\'s Manga Zone</string>
    <string name="About">Welcome to Manga Zone here we pride ourselves on delivering the best manga to you. Visit us today !</string>
    <string name="Location">Crystal Heights, St. James, Barbados</string>
    <string name="Call">(246) 269-2956</string>
    <string name="HoursTitle">Opening Hours</string>
    <string name="hours">Monday to Friday - 8:00 AM to 5:00 PM</string>
    <string name="email">smz@gmail.com</string>
</resources>
