<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.singlescreenapp.MainActivity">

    <ImageView
        android:id="@+id/businessLogo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:src="@drawable/logo"
        android:scaleType="fitXY"/>

    <TextView
        android:id="@+id/businessName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/businessLogo"
        android:padding="8dp"
        android:background="@color/colorPrimary"
        android:paddingLeft="16dp"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:text="@string/Name"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/businessName"
        android:orientation="vertical">

        <TextView
            android:id="@+id/info"
            style="@style/TextViewStyle"
            android:drawableLeft="@mipmap/ic_info_black_24dp"
            android:drawablePadding="16dp"
            android:text="@string/About"/>

        <TextView
            android:id="@+id/location"
            style="@style/TextViewStyle"
            android:text="@string/Location"
            android:drawableLeft="@mipmap/ic_location_on_black_24dp"
            android:drawablePadding="16dp" />

        <TextView
            android:id="@+id/email"
            style="@style/TextViewStyle"
            android:drawableLeft="@mipmap/ic_email_black_24dp"
            android:drawablePadding="16dp"
            android:text="@string/email"
            android:autoLink="email"
            android:textColorLink="@android:color/black"/>

        <TextView
            android:id="@+id/call"
           style="@style/TextViewStyle"
            android:drawableLeft="@mipmap/ic_call_black_24dp"
            android:drawablePadding="16dp"
            android:text="@string/Call"
            android:autoLink="phone"
            android:textColorLink="@android:color/black"/>

        <TextView
            android:id="@+id/hoursTitle"
            style="@style/TextViewStyle"
            android:text="@string/HoursTitle"/>

        <TextView
            android:id="@+id/hours"
            style="@style/TextViewStyle"
            android:layout_marginBottom="16dp"
            android:text="@string/hours"/>

    </LinearLayout>

</RelativeLayout>
